objects/Batch_Jobs_Audit_Log__c.object
<CustomObject>
    <description>Auduit Log to monitor Batch Jobs status</description>
    <fields>
        <fullName>Clonning_Date__c</fullName>
        <label>Clonning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_End_Date__c</fullName>
        <label>Job End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Executed_User__c</fullName>
        <label>Job Executed User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Failure_Reason__c</fullName>
        <label>Job Failure Reason</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <description>Job ID</description>
        <externalId>true</externalId>
        <label>Job ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Input_Parameters__c</fullName>
        <label>Job Input Parameters</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Status_Email_Send_To__c</fullName>
        <label>Job Status Email Send To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Summary__c</fullName>
        <label>Job Summary</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Records_processed__c</fullName>
        <description>Total number of processed records.</description>
        <label>Total Number Of Records processed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Failure_Records__c</fullName>
        <description>Total number of failure records</description>
        <label>Total Number of Failure Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Success_Records__c</fullName>
        <description>Total Number of successful records</description>
        <label>Total Number of Success Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Jobs Audit Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Job_ID__c</columns>
        <columns>NAME</columns>
        <columns>Job_Start_Date__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Failure_Reason__c</columns>
        <columns>Job_Status_Email_Send_To__c</columns>
        <columns>Total_Number_Of_Records_processed__c</columns>
        <columns>Total_Number_of_Failure_Records__c</columns>
        <columns>Total_Number_of_Success_Records__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Monthly_Maintenance</fullName>
        <columns>NAME</columns>
        <columns>Job_Input_Parameters__c</columns>
        <columns>Job_Start_Date__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Job_Failure_Reason__c</columns>
        <columns>Job_Status_Email_Send_To__c</columns>
        <columns>Total_Number_Of_Records_processed__c</columns>
        <columns>Total_Number_of_Failure_Records__c</columns>
        <columns>Total_Number_of_Success_Records__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Monthly Maintenance</value>
        </filters>
        <label>Monthly Maintenance</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Jobs Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>